--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -77,6 +77,8 @@
                                             <span class="badge bg-warning">Pending</span>
                                         {% elif rental.status == 'approved' %}
                                             <span class="badge bg-success">Approved</span>
+                                        {% elif rental.status == 'lost/damaged' %}
+                                            <span class="badge bg-danger">Lost/Damaged</span>
                                         {% elif rental.status == 'declined' %}
                                             <span class="badge bg-danger">Declined</span>
                                         {% elif rental.status == 'returned' %}
