--- a/templates/approve_rental.html
+++ b/templates/approve_rental.html
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <th>Total Charge:</th>
-                        <td>Rs. {{ rental.total_charge }}</td>
+                        <td>Rs. {{ rental.total_charge|round(2) }}</td>
                     </tr>
                 </table>
 
