--- a/templates/clerk_dashboard.html
+++ b/templates/clerk_dashboard.html
@@ -52,7 +52,7 @@
                                                 <td>{{ rental.item_title }}</td>
                                                 <td>{{ rental.rental_date.strftime('%Y-%m-%d') }}</td>
                                                 <td>{{ rental.due_date.strftime('%Y-%m-%d') }}</td>
-                                                <td>Rs. {{ rental.total_charge }}</td>
+                                                <td>Rs. {{ rental.total_charge|round(2) }}</td>
                                                 <td>
                                                     <a href="{{ url_for('approve_rental', rental_id=rental.id) }}" class="btn btn-success btn-sm">Approve</a>
                                                 </td>
