--- a/templates/make_deposit.html
+++ b/templates/make_deposit.html
@@ -15,7 +15,7 @@
                     {% if not current_user.membership_active %}
                         <p>You need to make an initial deposit of at least Rs. 1000 to activate your membership.</p>
                     {% else %}
-                        <p>Your current deposit balance: Rs. {{ current_user.deposit }}</p>
+                        <p>Your current deposit balance: Rs. {{ current_user.deposit|round(2)}}</p>
                     {% endif %}
                 </div>
 
