--- a/templates/clerk_dashboard.html
+++ b/templates/clerk_dashboard.html
@@ -54,7 +54,7 @@
                                                 <td>{{ rental.due_date.strftime('%Y-%m-%d') }}</td>
                                                 <td>Rs. {{ rental.total_charge|round(2) }}</td>
                                                 <td>
-                                                    <a href="{{ url_for('approve_rental', rental_id=rental.id) }}" class="btn btn-success btn-sm">Approve</a>
+                                                    <a href="{{ url_for('approve_rental', rental_id=rental.id) }}" class="btn btn-success btn-sm">View</a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
