--- a/templates/return_item.html
+++ b/templates/return_item.html
@@ -35,7 +35,7 @@
                     </tr>
                     <tr>
                         <th>Total Charge:</th>
-                        <td>Rs. {{ rental.total_charge }}</td>
+                        <td>Rs. {{ rental.total_charge|round(2) }}</td>
                     </tr>
                     <tr>
                         <th>Status:</th>
