--- a/templates/cancel_membership.html
+++ b/templates/cancel_membership.html
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <div class="alert alert-warning">
                     <p>Are you sure you want to cancel your membership?</p>
-                    <p>Your deposit amount of Rs. {{ rental.total_charge|round(2) }} will be refunded upon cancellation.</p>
+                    <p>Your deposit amount of Rs. {{ user.deposit|round(2) }} will be refunded upon cancellation.</p>
                     <p><strong>Note:</strong> Once cancelled, you will no longer be able to rent items until you reactivate your membership with a new deposit.</p>
                 </div>
 
