--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,14 +27,21 @@
                                 <td>{{ cart_item.item.title }}</td>
                                 <td>{{ cart_item.item.type }}</td>
                                 <td>{{ cart_item.item.genre }}</td>
-                                <td>Rs. {{ cart_item.item.daily_rate|round(2) }}</td>
+                                <td>
+                                    {% if cart_item.item.date_added and (cart_item.item.date_added + timedelta(days=365)) < now %}
+                                        <span class="text-decoration-line-through">Rs. {{ cart_item.item.daily_rate }}</span>
+                                        <span class="text-danger">Rs. {{ cart_item.daily_rate|round(2) }} (Discounted)</span>
+                                    {% else %}
+                                        Rs. {{ cart_item.daily_rate|round(2) }}
+                                    {% endif %}
+                                </td>
                                 <td>
                                     <form method="POST" action="{{ url_for('edit_cart', cart_id=cart_item.id) }}" class="d-inline">
-                                        <input type="number" name="days" value="{{ cart_item.days }}" min="1" max="14" class="form-control form-control-sm d-inline w-auto days-input" data-daily-rate="{{ cart_item.item.daily_rate }}" required>
+                                        <input type="number" name="days" value="{{ cart_item.days }}" min="1" max="14" class="form-control form-control-sm d-inline w-auto days-input" data-daily-rate="{{ cart_item.daily_rate }}" required>
                                         <button type="submit" class="btn btn-sm btn-primary">Update</button>
                                     </form>
                                 </td>
-                                <td class="item-total-cost">Rs. {{ (cart_item.item.daily_rate * cart_item.days)|round(2)}}</td>
+                                <td class="item-total-cost">Rs. {{ cart_item.total_cost|round(2) }}</td>
                                 <td>
                                     <form method="POST" action="{{ url_for('remove_from_cart', cart_id=cart_item.id) }}">
                                         <button type="submit" class="btn btn-danger btn-sm">Remove</button>
